# osmc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_macos_locally.sh  modelDescription.xml
.github/workflows/: build.yml
case-study/: coe.json  multimodel.json  readme.md  spec.mabl
case-study/fmus/: osmc.fmu  rabbitmq_cs_1.fmu
case-study/fmus/dummyfmu/: modelDescription.xml
case-study/fmus/dummyfmu/resources/: backend_grpc.py  backend_schemaless_rpc.py  fmi2.py  model.py
case-study/fmus/osmc/: modelDescription.xml
case-study/fmus/rabbitmq_cs_1/: modelDescription.xml
case-study/maestro-extension/: pom.xml  readme.md
case-study/maestro-extension/fmi2extension/: pom.xml
case-study/maestro-extension/fmi2extension-bundle/: pom.xml
case-study/maestro-extension/fmi2extension-bundle/src/test/java/org/intocps/maestro/fmi2extension/: Test.java
case-study/maestro-extension/fmi2extension-bundle/src/test/resources/fmi2extension/: osmc.fmu  rabbitmq_cs_1.fmu  rabbitmq_cs_1_working.fmu
case-study/maestro-extension/fmi2extension-bundle/src/test/resources/fmi2extension/rabbitmq_cs_1/resources/: modelDescription.xml
case-study/maestro-extension/fmi2extension/src/main/java/org/intocps/maestro/fmi2extension/: Fmi2ExtensionApi.java  FmiExtensionRuntimeModule.java
case-study/maestro-extension/fmi2extension/src/main/resources/org/intocps/maestro/fmi2extension/: FMI2Extension.mabl
case-study/server/: playback_gazebo_data-test.py  setup.sh
case-study/test_osa_rmqfmu/: osmc.fmu  readme.md  temp.py
case-study/test_osa_rmqfmu/osa-test-v2/: osmc.fmu  spec.mabl
oosmc-fmu/: CMakeLists.txt  modelDescription.xml
oosmc-fmu/src/: FmuContainer.cpp  FmuContainer.h  fmu.cpp  main.cpp
oosmc-fmu/test/: fmu_test_it.cpp  fmu_test_ut.cpp
osmc-core/: CMakeLists.txt
osmc-core/src/: CallBackTimer.h  FmuContainerCore.cpp  FmuContainerCore.h  Webserver.cpp  Webserver.h
osmc-core/test/: HTTPRequest.hpp  core_test.cpp  webserver_test.cpp
scripts/: build.sh
